fix: minor bug fix preventing cart-summary taking full width on smaller screens

--- a/src/app/pages/check-out/check-out.component.scss
+++ b/src/app/pages/check-out/check-out.component.scss
@@ -3,14 +3,13 @@
 @use "../../styles/abstracts/mixins" as m;
 
 .checkout-page {
-    
   &_grid {
     display: flex;
     flex-direction: column;
     padding: 2rem;
 
     @include m.medium {
-        padding: 2.5rem;
+      padding: 2.5rem;
     }
 
     @include m.desktop {
@@ -21,17 +20,19 @@
   }
 
   &_form {
-    border: solid 1px f.color-with-opacity('black', 0.1);
-    border-radius: .25rem;
+    border: solid 1px f.color-with-opacity("black", 0.1);
+    border-radius: 0.25rem;
     flex-basis: 70%;
     margin-bottom: 2rem;
   }
 
   &_summary {
-    flex-basis: 30%;
-    //  padding: 2rem;
-      align-self: start; // Keeps the summary at the top
-      position: sticky;
-      top: 8rem;
+    @include m.desktop {
+flex-basis: 30%;
+    align-self: start;
+    position: sticky;
+    top: 8rem;
+    }
+    
   }
 }
